* jargon-security - code for use with Spring security
* jargon-user-tagging - code for using free tagging and other metadata metaphors on top of iRODS
* jargon-transfer - transfer manager for managing and synchronizing data with iRODS
* jargon-ticket - support for ticket processing
* jargon-httpstream - stream http content into iRODS via Jargon

Other libraries are planned, such as connection pooling, as well as administrative functions.

==Requirements==

*Jargon depends on Java 1.6+
*Jargon is built using Apache Maven2, see POM for dependencies
*Jargon supports iRODS 2.4 through iRODS 3.0, and is tested with the current (as of release time) development version of iRODS

==Libraries==

Jargon-core uses Maven for dependency management.  See the pom.xml file for references to various dependencies.

Note that the following bug and feature requests are logged in GForge with related commit information [[https://code.renci.org/gf/project/jargon/tracker/]]

==Bug Fixes==

==Features==

 * [#775] iDrop 1.1.0 refactoring activities
 ** clean up deprecated methods and fix visibility so DataTransferOperations is the public API for put/get/copy/move
 
 * [#114] support for mounted collections, cross zone browsing, and soft links
 ** significant refactoring as support added, cleanup of deprecated methods, tightening package visibility
 ** added a MountedCollectionAO to administer mounted collections and soft links 
 ** Refactoring of key classes for support
 **** CollectionAndDataObjectListAndSearchAO
 **** DataObjectAO
 **** DataTransferOperations
 **** CollectionAO
 **** IRODSFile
 **** IRODSInputStream
 **** IRODSOutputStream
 
 *  [#696] Add ticket support
 ** added compareGivenTicketToActualAndUpdateAsNeeded() method to TicketAdminService, which allows for updating an entire ticket, computing deltas and updating fields as appropriate
 ** added support to stream data via an output stream to an iRODS collection with a ticket
 
 
 