@@ -66,5 +66,7 @@ Note that the following bug and feature requests are logged in GForge with relat
  ** added compareGivenTicketToActualAndUpdateAsNeeded() method to TicketAdminService, which allows for updating an entire ticket, computing deltas and updating fields as appropriate
  ** added support to stream data via an output stream to an iRODS collection with a ticket
  
+ *  [#853] IP - add ticket by admin
+ ** added ability to create a ticket for another user (given that the creator is rodsAdmin)
  
  
